2025-12-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/internals.h: No longer provide ATTRIB

2025-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* inst/include/tidy/math.h: Do not provide access to Rf_rnbeta

2025-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/internals.h: Comment-out TRUELENGTH which will
	disappear soon in R-devel

2025-11-28  Ivan Krylov  <krylov.r00t@gmail.com>

	* inst/include/tidy/internals.h: Reintroduced noReferences,
	maybeReferenced using permitted R API function NO_REFERENCES

2025-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* vignettes/motivation.md: Correct several typos

	* README.md: Add r-universe badge

2025-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.8

	* .github/workflows/ci.yaml: Switch to actions/checkout@v6

	* .github/workflows/ci.yaml: Add 'ubuntu-slim' to matrix

2025-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/internals.h: Comment-out five no longer
	accessible access points

2025-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Use r-ci with embedded bootstrap

2025-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/defines.h: Minor documentation enhancement

2025-01-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/createMatrix.cpp: Switch from Shield to Protect
	* inst/snippets/shieldExamples.cpp: Idem
	* rollminmaxExample.cpp: Idem

2024-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-10-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add note to 'R-api' site summarizing status

2024-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2024-05-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge
