@@ -118,6 +118,15 @@ namespace R {                   // we remain all tidied up in a namespace
 
     inline void message(const char *s)                 { R_ShowMessage(s);         }
 
+    // R 4.6.0 additions for attribute support
+    #if R_VERSION >= R_Version(4, 6, 0)
+    inline SEXP getAttributes(SEXP x)                  { return R_getAttributes(x);     }
+    inline R_xlen_t getAttributeCount(SEXP x)          { return R_getAttributeCount(x); }
+    inline SEXP getAttributeNames(SEXP x)              { return R_getAttributeNames(x); }
+    inline book hasAttrib(SEXP x, SEXP name)           { return R_hasAttrib(x);         }
+    inline int nrow(SEXP x)                            { return R_nrow(x);              }
+    inline int ncol(SEXP x)                            { return R_ncol(x);              }
+    #endif
 }
 
 #endif
