@@ -1,3 +1,8 @@
+2025-12-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/tidy/internals.h: Define six new accessor for working
+	with attributes available in R 4.6.0 or later
+
 2025-12-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/tidy/internals.h: No longer provide ATTRIB
